--- a/README.adoc
+++ b/README.adoc
@@ -2,8 +2,8 @@
 Tristano Ajmone <tajmone@gmail.com>
 2019-06-15
 // tag::AlanRevInfo[]
-:AlanItaV: 20
-:AlanSDK: 3.0beta6 build 1980
+:AlanItaV: 21
+:AlanSDK: 3.0beta6 build 2015
 :revnumber: 0.{AlanItaV}-Alpha
 // end::AlanRevInfo[]
 :lang: it
@@ -143,6 +143,7 @@ ifdef::preface-title[:preface-title: Prefazione]
 :build_1870: link:https://www.alanif.se/download-alan-v3/development-snapshots/development-snapshots/build1870[3.0beta6 build 1870^,title="Vai alla pagina di download della snapshot Alan 3.0beta6 build 1870"]
 :build_1878: link:https://www.alanif.se/download-alan-v3/development-snapshots/development-snapshots/build1878[3.0beta6 build 1878^,title="Vai alla pagina di download della snapshot Alan 3.0beta6 build 1878"]
 :build_1880: link:https://www.alanif.se/download-alan-v3/development-snapshots/development-snapshots/build1880[3.0beta6 build 1880^,title="Vai alla pagina di download della snapshot Alan 3.0beta6 build 1880"]
+:build_2015: link:https://www.alanif.se/download-alan-v3/development-snapshots/development-snapshots/build2015[3.0beta6 build 2015^,title="Vai alla pagina di download della snapshot Alan 3.0beta6 build 2015"]
 
 
 // ** Alan Upstream Commits Links **
@@ -444,6 +445,11 @@ Grazie.
 == Ultime novità
 
 Alcune notizie flash sugli aggiornamenti importanti del progetto...
+
+=== 2019/08/15 -- Passaggio a Alan 3.0beta6 build 2015
+
+La libreria adotta la nuova {developer_snaphshot} di Alan {build_2015}.
+
 
 === 2019/04/02 -- Modulo Italian unificato
 
